--- a/Visual Studio/Iris Widget.vcxproj.filters
+++ b/Visual Studio/Iris Widget.vcxproj.filters
@@ -1,36 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="..\Pubc\Version.h">
-      <Filter>Core</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Pubc\Register.h">
-      <Filter>Core</Filter>
-    </ClInclude>
     <ClInclude Include="..\Pubc\Widget Supplier.h">
       <Filter>Supplier</Filter>
     </ClInclude>
+    <ClInclude Include="..\Pubc\Register.h">
+      <Filter>Version</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Pubc\Version.h">
+      <Filter>Version</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Meta\contributors.json">
-      <Filter>Meta</Filter>
-    </None>
-    <None Include="..\Meta\libraries.json">
-      <Filter>Meta</Filter>
-    </None>
     <None Include="..\Pub_ts\package.json">
       <Filter>Meta</Filter>
     </None>
     <None Include="..\Pub_ts\Shared\Widget Interfaces.ts">
       <Filter>Widget Shared</Filter>
     </None>
+    <None Include="..\Meta\contributors.json">
+      <Filter>Version</Filter>
+    </None>
+    <None Include="..\Meta\libraries.json">
+      <Filter>Version</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Meta">
       <UniqueIdentifier>{809cf452-6954-4c78-ac6f-44c04101b5d3}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Core">
-      <UniqueIdentifier>{ee8256a8-4eda-42a0-825e-5d369a9bedf4}</UniqueIdentifier>
     </Filter>
     <Filter Include="Supplier">
       <UniqueIdentifier>{bf2c08e9-c7e6-4ddc-864a-5a779f45315d}</UniqueIdentifier>
@@ -41,26 +38,36 @@
     <Filter Include="Widgets">
       <UniqueIdentifier>{dbd16bb5-25c4-4e1f-86a8-420f80005e41}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Version">
+      <UniqueIdentifier>{fb83696e-c699-403f-a347-901d344be067}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="..\Meta\generate_meta.txt">
-      <Filter>Meta</Filter>
-    </CustomBuild>
     <CustomBuild Include="..\Pub_ts\Widgets\Browser.tsx">
       <Filter>Widgets</Filter>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="..\Meta\licence_name.txt">
-      <Filter>Meta</Filter>
-    </Text>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\Pubc\Version.cpp">
-      <Filter>Core</Filter>
-    </ClCompile>
     <ClCompile Include="..\Pubc\Widget Supplier.cpp">
       <Filter>Supplier</Filter>
     </ClCompile>
+    <ClCompile Include="..\Pubc\Version.cpp">
+      <Filter>Version</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\Meta\licence_name.txt">
+      <Filter>Version</Filter>
+    </Text>
+  </ItemGroup>
+  <ItemGroup>
+    <BRMetaDef Include="..\..\BlackRoot\Meta\.brmeta">
+      <Filter>Version</Filter>
+    </BRMetaDef>
+  </ItemGroup>
+  <ItemGroup>
+    <BRVersionDef Include="..\..\BlackRoot\Meta\.brversion">
+      <Filter>Version</Filter>
+    </BRVersionDef>
   </ItemGroup>
 </Project>
